--- a/index.html
+++ b/index.html
@@ -54,11 +54,16 @@
             z-index: 0;
         }
         .main #next{
-            width: 150px;
             position: absolute;
-            bottom: 200px;
+            width: 100px;
+            height: 50px;
+            text-align: center;
+            border: 1px solid #000;
+            border-radius: 5px;
+            top: 80%;
             left: calc( 50% - 50px );
             cursor: pointer;
+            background-color: #fff;
         }
     </style>
 </head>
